--- a/css/styles.css
+++ b/css/styles.css
@@ -6,5 +6,13 @@
   }
 
 body {
+    margin: 0;
     font-family: 'Magic School Two';
+}
+
+.main {
+    background-image: url('../img/263156.jpg');
+    background-size: cover;
+    height: 100vh;
+    background-position: center;
 }
