--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,9 @@
     src: url('../assets/MagicSchoolTwo.ttf');
   }
 
+
 body {
     margin: 0;
-    font-family: 'Magic School Two';
 }
 
 .main {
@@ -15,4 +15,50 @@ body {
     background-size: cover;
     height: 100vh;
     background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'IM Fell English SC', serif;
+}
+
+.container {
+    background-color: white;
+    width: 50%;
+    height: 50%;
+    text-align: center;
+}
+
+.main-title, .my-house {
+    font-family: 'Magic School Two';
+}
+
+.main-title {
+    color: white;
+    font-size: 60px;
+    font-weight: 400;
+    display: block;
+}
+
+.btn-title {
+    font-family: 'IM Fell English SC', serif;
+}
+
+.sorting-btn {
+    background-color: black;
+    color: white;
+    border: none;
+    padding: 10px;
+}
+
+.my-house {
+    font-size: 40px;
+}
+
+.gryffindor {
+    background-color:gold;
+}
+
+.slytherin {
+    background-color: rgb(39, 182, 87);
 }
